--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,7 +7,6 @@
 
 html {
     --header-height: 75px;
-    scroll-padding-top: var(--header-height);
 }
 
 body {
@@ -18,7 +17,7 @@ section {
     min-height: -o-calc(100vh - var(--header-height));
     min-height: -webkit-calc(100vh - var(--header-height));
     min-height: -moz-calc(100vh - var(--header-height));
-    min-height: calc(100vh - var(--header-height));
+    min-height: 100vh;
     overflow: hidden;
 }
 
@@ -80,23 +79,26 @@ section {
 
 }
 
-.hero-flex {
+.flex {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     height: 100vh;
+    width: 100%;
+    margin: 0 auto;
 }
 
-.hero-flex-top {
+.flex-top {
     align-self: flex-start;
 }
 
-.hero-flex-center {
-    max-width: 80%
+.flex-center {
+    min-width: 80%;
+    max-width: 80%;
 }
 
-.hero-flex-bottom {
+.flex-bottom {
     align-self: flex-end;
 }
 
@@ -114,11 +116,10 @@ section {
     font-size: 45px;
 }
 
-.content {
-    padding-top: 5vh;
+.content h2 {
+    width: 80%;
+    margin: 0 auto;
     text-align: center;
-    font-size: 18px;
-    line-height: 1.2;
 }
 
 .content p {
@@ -126,17 +127,49 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-    text-align: center;
 }
 
-.content-flex-row {
+.content-flex {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 20px 35px;
-    justify-content: center;
+    align-content: center;
 }
 
-.content-flex-row p {
-    justify-content: center;
+.flex-row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    width: 100%;
+}
+
+.button {
+    border: 1px solid white;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+    min-width: 150px;
+    width: 300px;
+    text-decoration: none;
+}
+
+.button h3 {
+    color: white;
+    font-size: 17px; 
+    font-weight: medium;
+    margin: 0 auto 20vh;
+    width: 100%;
+}
+
+.button:hover {
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.3), 
+        rgba(255, 255, 255, 0.3));
 }
 
 .section-title {
@@ -158,6 +191,11 @@ section {
 
 .about-me .section-title {
     color: black;
+    text-align: right;
+}
+
+.about-me p {
+    text-align: left;
 }
 
 .my-work {
