--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,14 +13,17 @@ body {
     overflow-y: scroll;
 }
 
+/*Section styling to fill sections to viewport height*/
 section {
     min-height: -o-calc(100vh - var(--header-height));
     min-height: -webkit-calc(100vh - var(--header-height));
     min-height: -moz-calc(100vh - var(--header-height));
     min-height: calc(100vh - var(--header-height));
+    overflow-y: hidden;
     overflow: auto;
 }
 
+/* Styling for Hero Section */
 .hero {
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
@@ -79,6 +82,7 @@ section {
 
 }
 
+/* Styling for flex box for content */
 .flex {
     display: flex;
     justify-content: center;
@@ -90,6 +94,7 @@ section {
     margin: 0 auto;
 }
 
+/* Styling to be able to center content within larger flexbox */
 .flex-top {
     align-self: flex-start;
 }
@@ -117,6 +122,7 @@ section {
     font-size: 45px;
 }
 
+/* Content styling for sections other than Hero */
 .content h2 {
     width: 80%;
     margin: 0 auto;
@@ -130,6 +136,7 @@ section {
     margin: 0 auto;
 }
 
+/* Content flexbox */
 .content-flex {
     display: flex;
     flex-wrap: wrap;
@@ -139,87 +146,18 @@ section {
     align-content: center;
 }
 
-.mywork-flex-row > a {
-    margin: 10px;
+/* About Me section styling */
+.about-me img {
+    border-radius: 100%;
+    height: 125px;
+
 }
 
-.mywork-button {
-    display: inline-block;
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    min-width: 325px;
+.about-me p {
+    font-size: 18px;
 }
 
-.mywork-flex-row {
-    display: inline-flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-}
-
-.mywork-button h3 {
-    color: white;
-    font-size: 17px; 
-    font-weight: medium;
-    margin: 0 auto 20vh;
-    width: 100%;
-}
-
-.mywork-button p {
-    color:white;
-    font-size: 14px;
-    width: 100%;
-}
-
-#ro-btn {
-    background-image: url("../images/icons/roinfo.jpg");
-    background-size: contain;
-}
-
-#ro-btn:hover{
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.7), 
-        rgba(0, 0, 0, 0.7)),
-        url("../images/icons/roinfo.jpg");
-    background-size: contain;
-}
-
-#webpass-btn {
-    background-image: url("../images/icons/webpass.jpg");
-    background-size: contain;
-}
-
-#webpass-btn:hover{
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.7), 
-        rgba(0, 0, 0, 0.7)),
-        url("../images/icons/webpass.jpg");
-    background-size: contain;
-}
-
-#seo-btn {
-    background-image: url("../images/icons/seo.jpg");
-    background-size: contain;
-}
-
-#seo-btn:hover{
-    background: linear-gradient(
-        rgba(0, 0, 0, 0.7), 
-        rgba(0, 0, 0, 0.7)),
-        url("../images/icons/seo.jpg");
-    background-size: contain;
-}
-
-.contact-button:hover, .mywork-button:hover {
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.3), 
-        rgba(255, 255, 255, 0.3));
-}
-
+/* Default section title styling */
 .section-title {
     width: 100%;
     font-size: 32px;
@@ -246,6 +184,7 @@ section {
     text-align: left;
 }
 
+/* Content styling for My Work Section */
 .my-work {
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
@@ -259,6 +198,94 @@ section {
 
 .my-work .section-title {
     color: white;
+}
+
+.mywork-flex-row > a {
+    margin: 10px;
+}
+
+.mywork-button {
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    min-width: 325px;
+    min-height: 230px;
+}
+
+.mywork-flex-row {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.mywork-button h3 {
+    color: white;
+    font-size: 17px; 
+    font-weight: medium;
+    margin: 0 auto 20vh;
+    width: 100%;
+    display: none;
+}
+
+.mywork-button p {
+    color:white;
+    font-size: 14px;
+    width: 100%;
+}
+
+.mywork-button:hover h3 {
+    display: contents;
+}
+
+#ro-btn {
+    background-image: url("../images/project-badges/roinfo.jpg");
+    background-size: fill;
+}
+
+#ro-btn:hover{
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.7), 
+        rgba(0, 0, 0, 0.7)),
+        url("../images/project-badges/roinfo.jpg");
+    background-size: fill;
+}
+
+#webpass-btn {
+    background-image: url("../images/project-badges/webpass.jpg");
+    background-size: fill;
+}
+
+#webpass-btn:hover{
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.7), 
+        rgba(0, 0, 0, 0.7)),
+        url("../images/project-badges/webpass.jpg");
+    background-size: fill;
+}
+
+#seo-btn {
+    background-image: url("../images/project-badges/seo.jpg");
+    background-size: fill;
+}
+
+#seo-btn:hover{
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.7), 
+        rgba(0, 0, 0, 0.7)),
+        url("../images/project-badges/seo.jpg");
+    background-size: fill;
+}
+
+/* Default styling for buttons, overridden by more specific styling */
+.contact-button:hover, .mywork-button:hover {
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.3), 
+        rgba(255, 255, 255, 0.3));
 }
 
 .contact {
