--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -379,3 +379,27 @@ footer {
 footer h2 {
     font-size: 30px;
 }
+
+@media screen and (max-width: 900px) {
+    .about-me .section-title {
+        color: black;
+        text-align: right;
+        font-size: 24px;
+    }
+    
+    .about-me p {
+        text-align: left;
+        font-size: 16px;
+    }
+
+    .my-work .section-title {
+        font-size: 24px;
+    }
+
+}
+
+@media screen and (max-width: 490px) {
+    html {
+        --header-height: 100px;
+    }
+}
