--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -41,7 +41,7 @@ section {
         rgba(0, 0, 0, 0.3), 
         rgba(0, 0, 0, 0.3));
     backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20);
+    -webkit-backdrop-filter: blur(20px);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
