--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,13 +35,41 @@
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
         rgba(0, 0, 0, 0.6)),
-        url("../img/bg-mywork.jpg");
+        url("../img/bg-contact.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-position: 100%;
 }
 
+#carousel .card {
+    border-color: white;
+    border-width: 2px;
+    color: white;
+}
+
+#carousel .card .title {
+    color: white;
+}
+
+#carousel .card footer {
+    background-color: white;
+}
+
 #carousel .card .content {
     height: 500px;
+}
+
+.footer {
+    padding: 1.25rem;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.3), 
+        rgba(0, 0, 0, 0.3));
+}
+
+.footer > *, .footer p strong {
+    margin: none;
+    padding: 0px;
+    border: 0px;
+    color: white;
 }
