--- a/assets/css/cardstyles.css
+++ b/assets/css/cardstyles.css
@@ -62,7 +62,7 @@
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
         rgba(0, 0, 0, 0.6)),
-        url("https://github.com/hsengu/calorie-counter/raw/main/public/img/screenshots/001.jpg");
+        url("../img/project-badges/calorie-tracker.jpg");
     background-size: cover;
     background-position: center;
     background-position: 100%;
