--- a/assets/css/cardstyles.css
+++ b/assets/css/cardstyles.css
@@ -58,7 +58,7 @@
     background-position: 100%;
 }
 
-.ecommerce-backend {
+.calorie-tracker {
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
         rgba(0, 0, 0, 0.6)),
